--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,40 @@ body {
   font-family: sans-serif;
   padding-left: 20%;
   padding-right: 20%;
+  color: #FFFFFF;
 }
 
 label {
   font-size: 18px;
-  display: block;
   padding-bottom: 10px;
+}
+
+h1, p {
+  color: black;
+  text-align: center;
+}
+
+#info  {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+#info input {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #radio {
   display: flex;
   padding-bottom: 10px;
+  justify-content: center;
 }
 
 #checkbox {
+  display: flex;
     padding-bottom: 10px;
+    justify-content: center;
 }
 
 form {
@@ -27,9 +46,21 @@ form {
 }
 
 textarea {
-  margin-top: 10px;
+  display: block;
+  margin: 10px auto;
 }
 
 #submit {
   margin-top: 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+h2, h3 {
+  text-align: center;
+}
+
+select {
+  display: block;
+  margin: 0 auto;
 }
